# smart-chessboard-xiao-image

./: .clang-format  .clangd  .gitignore  README.md  docker_build.sh
.github/workflows/: build-release.yml  build.yml
app/: CMakeLists.txt  prj-debug.conf  prj.conf  west.yml
app/boards/: seeeduino_xiao.overlay
app/src/: chessboard.c  chessboard.h  chessboard_calibration.c  chessboard_calibration.h  chessboard_cmd.c  main.c  version_cmd.c  watchdog.c  watchdog.h
application/: west.yml
application/app/: CMakeLists.txt  prj.conf  shell.conf
application/app/src/: chessboard.c  chessboard.h  chessboard_calibration.c
